--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,10 @@
 .navbar {
-    background-color: var(--color-primary);
+    background-color: #34C948; 
     height: 74px;
     width: 100vw;
     padding: 0px 32px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: #FFFFFF;
   }
