--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -6,12 +6,33 @@
     justify-content: start;
     width: 100%;
     overflow: hidden;
-    padding: 10px;
+    padding: 10px 20px;
 }
 .heading{
     color: #FFFFFF;
     font-size: 20px;
     font-weight: 600;
-    text-align: start;
     margin-bottom: 20px;
+}
+.showButton{
+    color: #34C948;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.topSection{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.grid{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: start;
+    align-items: center;
 }
